<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <variable
            name="viewModel"
            type="com.furkanaskin.app.podpocket.ui.main.MainActivityViewModel" />
    </data>


    <RelativeLayout
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@drawable/ic_app_bg"
        tools:context=".ui.main.MainActivity">


        <ImageView
            android:id="@+id/imageViewAppLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/textViewHello"
            android:layout_marginStart="64dp"
            android:layout_marginBottom="100dp"
            android:src="@drawable/app_logo_small" />


        <com.furkanaskin.app.podpocket.ui.PodPocketTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/imageViewAppLogo"
            android:layout_alignBottom="@id/imageViewAppLogo"
            android:layout_marginStart="24dp"
            android:layout_toEndOf="@id/imageViewAppLogo"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="32sp" />

        <com.furkanaskin.app.podpocket.ui.PodPocketBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:id="@+id/textViewHello"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="24sp"
            android:textAllCaps="true"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:elevation="2dp"
            android:layout_marginStart="30dp"
            android:onClick="@{() -> viewModel.loginClick()}"
            android:layout_marginEnd="30dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:textColor="@color/colorPrettyPurple"
            android:textColorHint="@color/colorPrettyPurple"
            app:strokeWidth="2dp"
            app:cornerRadius="50dp"
            app:strokeColor="@color/colorPrettyPurple"
            android:layout_above="@id/buttonRegister" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:onClick="@{() -> viewModel.registerClick()}"
            app:strokeColor="@android:color/white"
            app:cornerRadius="50dp"
            app:strokeWidth="2dp"
            android:backgroundTint="@color/colorPrettyPurple" />

    </RelativeLayout>
</layout>
