<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <variable
            name="viewModel"
            type="com.furkanaskin.app.podpocket.ui.profile.ProfileViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainBackgroundColor"
        android:fitsSystemWindows="true"
        tools:context=".ui.profile.ProfileFragment">

        <LinearLayout
            android:id="@+id/linearLayoutInfoContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_8_dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageViewProfilePicture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_16_dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textColorHint="@color/colorCyan"
                android:layout_marginTop="@dimen/margin_16_dp"
                app:boxStrokeColor="@color/colorCyan">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16_dp"
                    android:inputType="textPersonName"
                    android:text="@{viewModel.getName()}"
                    android:textColor="@color/colorPrettyOrange" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surname"
                android:textColorHint="@color/colorCyan"
                app:boxStrokeColor="@color/colorCyan">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16_dp"
                    android:inputType="textPersonName"
                    android:text="@{viewModel.getSurname()}"
                    android:textColor="@color/colorPrettyOrange" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail"
                android:textColorHint="@color/colorCyan"
                app:boxStrokeColor="@color/colorCyan">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16_dp"
                    android:inputType="textEmailAddress"
                    android:text="@{viewModel.userData.email}"
                    android:textColor="@color/colorPrettyOrange" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_birthday"
                android:textColor="@color/colorPrettyOrange"
                android:textColorHint="@color/colorCyan"
                app:boxStrokeColor="@color/colorCyan">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16_dp"
                    android:inputType="date"
                    android:text="@{viewModel.userData.birthday}"
                    android:textColor="@color/colorPrettyOrange" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_favourite_category"
                android:textColorHint="@color/colorCyan"
                app:boxStrokeColor="@color/colorCyan">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextMostLovedCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16_dp"
                    android:inputType="textAutoComplete"
                    android:text="@{viewModel.userData.mostLovedCategory}"
                    android:textColor="@color/colorPrettyOrange" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSave"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/linearLayoutInfoContainer"
            android:layout_marginStart="@dimen/margin_8_dp"
            android:layout_marginTop="@dimen/margin_48_dp"
            android:layout_marginEnd="@dimen/margin_8_dp"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/colorCyan"
            app:backgroundTint="@android:color/transparent"
            app:rippleColor="@color/colorCyan"
            app:strokeColor="@color/colorCyan"
            app:strokeWidth="2dp" />
    </RelativeLayout>
</layout>
