<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <variable
            name="viewModel"
            type="com.furkanaskin.app.podpocket.ui.login.LoginViewModel" />
    </data>


    <RelativeLayout
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ui.login.LoginActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:hint="@string/email"
            app:boxStrokeWidth="2dp"
            android:textColorHint="@color/textColor"
            app:boxStrokeColor="@color/buttonStrokeColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tilEmail"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:hint="@string/password"
            app:boxStrokeWidth="2dp"
            android:textColorHint="@color/textColor"
            app:boxStrokeColor="@color/buttonStrokeColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_below="@id/tilPassword"
            android:layout_marginTop="50dp"
            android:text="@string/sign_in"
            android:backgroundTint="@color/buttonStrokeColor"/>
    </RelativeLayout>
</layout>
