<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <variable
            name="viewModel"
            type="com.furkanaskin.app.podpocket.ui.forget_password.ForgetPasswordViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ui.forget_password.ForgetPasswordActivity">

        <me.zhanghai.android.materialprogressbar.MaterialProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal.NoPadding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:mpb_progressStyle="horizontal"
            app:mpb_useIntrinsicPadding="false"
            app:visibility="@{viewModel.progressBarView}" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/email"
            android:textColorHint="@color/textColor"
            app:boxStrokeColor="@color/buttonStrokeColor"
            app:boxStrokeWidth="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:text="@={viewModel.userName}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.furkanaskin.app.podpocket.ui.PodPocketLightTextView
            android:id="@+id/textViewForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tilEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/mail_delay"
            android:textColor="@color/textColor" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewForgetPassword"
            android:layout_marginStart="32dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/buttonStrokeColor"
            android:onClick="@{() -> viewModel.buttonClick()}"
            android:text="@string/reset_password" />


    </RelativeLayout>
</layout>
