<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <variable
            name="viewModel"
            type="com.furkanaskin.app.podpocket.ui.home.HomeViewModel" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:fitsSystemWindows="true">

            <RelativeLayout
                android:id="@+id/rootView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ic_app_bg"
                android:descendantFocusability="blocksDescendants"
                android:fitsSystemWindows="true"
                android:focusable="true"
                tools:context=".ui.home.HomeFragment">

                <ImageView
                    android:layout_width="256dp"
                    android:layout_height="266dp"
                    android:layout_alignParentEnd="true"
                    android:adjustViewBounds="true"
                    android:fitsSystemWindows="true"
                    android:src="@drawable/ic_home_bg" />

                <ImageView
                    android:id="@+id/imageViewAppLogoSmall"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="57dp"
                    android:src="@drawable/app_logo_small" />

                <ImageView
                    android:id="@+id/buttonSearch"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="57dp"
                    android:layout_marginEnd="35dp"
                    android:src="@drawable/ic_gradient_search" />

                <com.furkanaskin.app.podpocket.utils.ui.PodPocketTextView
                    android:id="@+id/textViewAppName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/imageViewAppLogoSmall"
                    android:layout_alignBottom="@id/imageViewAppLogoSmall"
                    android:layout_marginStart="12dp"
                    android:layout_toEndOf="@id/imageViewAppLogoSmall"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/white" />

                <com.furkanaskin.app.podpocket.utils.ui.PodPocketBoldTextView
                    android:id="@+id/textViewMainHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imageViewAppLogoSmall"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="48dp"
                    android:text="@string/explore"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <com.furkanaskin.app.podpocket.utils.ui.PodPocketLightTextView
                    android:id="@+id/textViewTagLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewMainHeading"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="12dp"
                    android:lines="2"
                    android:maxWidth="140dp"
                    android:text="@string/all_favorites_under_one_roof"
                    android:textColor="@color/colorHomeText"
                    android:textSize="12sp" />


                <com.furkanaskin.app.podpocket.utils.ui.PodPocketBoldTextView
                    android:id="@+id/textViewBestPodcasts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewTagLine"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="@dimen/margin_48_dp"
                    android:text="@string/best_podcasts_in_your_region"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="16sp" />


                <com.furkanaskin.app.podpocket.utils.ui.PodPocketRecyclerView
                    android:id="@+id/recyclerViewBestPodcasts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewBestPodcasts"
                    android:layout_marginStart="@dimen/margin_8_dp"
                    android:layout_marginTop="@dimen/margin_16_dp"
                    android:layout_marginEnd="@dimen/margin_8_dp"
                    android:clipToPadding="false" />

                <com.furkanaskin.app.podpocket.utils.ui.PodPocketBoldTextView
                    android:id="@+id/textViewRecommendedPodcasts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/recyclerViewBestPodcasts"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="@dimen/margin_16_dp"
                    android:text="@string/recommended_podcasts"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="16sp" />


                <com.furkanaskin.app.podpocket.utils.ui.PodPocketRecyclerView
                    android:id="@+id/recyclerViewRecommendedPodcasts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewRecommendedPodcasts"
                    android:layout_marginStart="@dimen/margin_8_dp"
                    android:layout_marginTop="@dimen/margin_16_dp"
                    android:layout_marginEnd="@dimen/margin_8_dp"
                    android:clipToPadding="false"
                    android:orientation="horizontal" />

                <com.furkanaskin.app.podpocket.utils.ui.PodPocketBoldTextView
                    android:id="@+id/textViewRecommendedEpisodes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/recyclerViewRecommendedPodcasts"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="@dimen/margin_16_dp"
                    android:text="@string/recommended_episodes"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="16sp" />


                <com.furkanaskin.app.podpocket.utils.ui.PodPocketRecyclerView
                    android:id="@+id/recyclerViewRecommendedEpisodes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewRecommendedEpisodes"
                    android:layout_marginStart="@dimen/margin_8_dp"
                    android:layout_marginTop="@dimen/margin_16_dp"
                    android:layout_marginEnd="@dimen/margin_8_dp"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    app:layoutManager="LinearLayoutManager" />

            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>
